--- a/static/index.html
+++ b/static/index.html
@@ -62,29 +62,41 @@
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <style>
+        .material-symbols-rounded {
+            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 
 <body class="bg-gray-100 h-screen overflow-hidden text-gray-800">
     <div id="app" class="flex h-full">
         <!-- Sidebar -->
-        <div class="w-64 bg-gray-50 border-r border-gray-200 flex flex-col flex-shrink-0">
+        <div :class="isSidebarOpen ? 'w-64' : 'w-0'"
+            class="bg-gray-50 border-r border-gray-200 flex flex-col flex-shrink-0 transition-all duration-300 overflow-hidden">
             <!-- Header -->
             <div class="p-4 border-b border-gray-200 flex justify-between items-center">
-                <h1 class="text-xl font-semibold text-gray-700">Shynotes</h1>
-                <div class="flex gap-1">
-                    <button @click="createFolder" class="p-1 hover:bg-gray-200 rounded text-gray-500"
+                <h1 class="text-xl font-bold text-gray-700 tracking-wider">SHYNOTE</h1>
+                <div class="flex gap-2">
+                    <button @click="createFolder" class="p-1 hover:bg-gray-200 rounded relative group"
                         title="New Folder">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-5 h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M12 10.5v6m3-3H9m4.06-7.19-2.12-2.12a1.5 1.5 0 0 0-1.061-.44H4.5A2.25 2.25 0 0 0 2.25 6v12a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9a2.25 2.25 0 0 0-2.25-2.25h-5.379a1.5 1.5 0 0 1-1.06-.44Z" />
-                        </svg>
+                        <img src="/static/icons/folder.svg" class="w-6 h-6" alt="New Folder">
+                        <div
+                            class="absolute -bottom-1 -right-1 bg-white rounded-full p-0.5 shadow-sm border border-gray-100">
+                            <span
+                                class="material-symbols-rounded text-[10px] text-gray-600 font-bold block leading-none">add</span>
+                        </div>
                     </button>
-                    <button @click="createNote" class="p-1 hover:bg-gray-200 rounded text-gray-500" title="New Note">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-5 h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
-                        </svg>
+                    <button @click="createNote" class="p-1 hover:bg-gray-200 rounded relative group" title="New Note">
+                        <img src="/static/icons/markdown.svg" class="w-6 h-6" alt="New Note">
+                        <div
+                            class="absolute -bottom-1 -right-1 bg-white rounded-full p-0.5 shadow-sm border border-gray-100">
+                            <span
+                                class="material-symbols-rounded text-[10px] text-gray-600 font-bold block leading-none">add</span>
+                        </div>
                     </button>
                 </div>
             </div>
@@ -98,31 +110,50 @@
                     <!-- Uncategorized Notes (Root) -->
                     <div v-for="note in rootNotes" :key="note.id" @click="selectNote(note)"
                         :class="{'bg-blue-50 border-blue-200': selectedNote && selectedNote.id === note.id, 'hover:bg-gray-100 border-transparent': !selectedNote || selectedNote.id !== note.id}"
-                        class="p-2 mb-1 cursor-pointer border rounded-md">
-                        <div class="font-medium text-sm text-gray-700 truncate">{{ note.title || 'Untitled' }}</div>
+                        class="p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between">
+                        <div class="flex items-center truncate">
+                            <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0" alt="Markdown">
+                            <div class="font-medium text-sm text-gray-700 truncate">{{ note.title || 'Untitled' }}</div>
+                        </div>
+                        <button @click.stop="deleteNote(note.id)"
+                            class="opacity-0 group-hover:opacity-100 text-gray-400 hover:text-red-500 transition-opacity p-1"
+                            title="Delete Note">
+                            <span class="material-symbols-rounded text-[16px]">delete</span>
+                        </button>
                     </div>
 
                     <!-- Folders -->
                     <div v-for="folder in folders" :key="folder.id" class="mb-2">
-                        <div class="flex items-center text-sm font-semibold text-gray-500 px-2 py-1 mb-1">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                class="w-4 h-4 mr-1">
-                                <path
-                                    d="M3.75 3a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75H4c.414 0 .75-.336.75-.75v-.5a.75.75 0 0 0-.75-.75h-.25Z" />
-                                <path fill-rule="evenodd"
-                                    d="M2.25 7a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5h-14a.75.75 0 0 1-.75-.75Zm0 4a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5h-14a.75.75 0 0 1-.75-.75Zm0 4a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5h-14a.75.75 0 0 1-.75-.75Z"
-                                    clip-rule="evenodd" />
-                            </svg>
+                        <div class="flex items-center text-sm font-semibold text-gray-500 px-2 py-1 mb-1 group">
+                            <img src="/static/icons/folder.svg" class="w-5 h-5 mr-2" alt="Folder">
                             {{ folder.name }}
                             <button @click.stop="createNoteInFolder(folder.id)"
-                                class="ml-auto hover:text-gray-700">+</button>
+                                class="ml-auto opacity-0 group-hover:opacity-100 hover:text-gray-700 transition-opacity mr-1"
+                                title="Add Note to Folder">
+                                <span class="material-symbols-rounded text-[18px]">add</span>
+                            </button>
+                            <button @click.stop="deleteFolder(folder.id)"
+                                class="opacity-0 group-hover:opacity-100 text-gray-400 hover:text-red-500 transition-opacity"
+                                title="Delete Folder">
+                                <span class="material-symbols-rounded text-[16px]">delete</span>
+                            </button>
                         </div>
                         <div class="pl-3 border-l-2 border-gray-100 ml-2">
                             <div v-for="note in getFolderNotes(folder.id)" :key="note.id" @click="selectNote(note)"
                                 :class="{'bg-blue-50 border-blue-200': selectedNote && selectedNote.id === note.id, 'hover:bg-gray-100 border-transparent': !selectedNote || selectedNote.id !== note.id}"
-                                class="p-2 mb-1 cursor-pointer border rounded-md bg-white">
-                                <div class="font-medium text-sm text-gray-700 truncate">{{ note.title || 'Untitled' }}
+                                class="p-2 mb-1 cursor-pointer border rounded-md bg-white flex items-center group justify-between">
+                                <div class="flex items-center truncate">
+                                    <img src="/static/icons/markdown.svg" class="w-4 h-4 mr-2 flex-shrink-0"
+                                        alt="Markdown">
+                                    <div class="font-medium text-sm text-gray-700 truncate">{{ note.title || 'Untitled'
+                                        }}
+                                    </div>
                                 </div>
+                                <button @click.stop="deleteNote(note.id)"
+                                    class="opacity-0 group-hover:opacity-100 text-gray-400 hover:text-red-500 transition-opacity p-1"
+                                    title="Delete Note">
+                                    <span class="material-symbols-rounded text-[16px]">delete</span>
+                                </button>
                             </div>
                             <div v-if="getFolderNotes(folder.id).length === 0"
                                 class="text-xs text-gray-300 italic px-2">Empty</div>
@@ -137,18 +168,22 @@
             <div v-if="selectedNote" class="flex flex-col h-full">
                 <!-- Toolbar -->
                 <div class="h-14 border-b border-gray-100 flex justify-between items-center px-4 flex-shrink-0">
-                    <input v-model="selectedNote.title" @input="debouncedUpdate"
-                        class="text-lg font-bold text-gray-800 outline-none w-full bg-transparent placeholder-gray-300"
-                        placeholder="Note Title">
-                    <div class="flex items-center gap-2">
+                    <div class="flex items-center w-full mr-4">
+                        <button @click="toggleSidebar"
+                            class="p-2 mr-2 text-gray-400 hover:text-gray-600 hover:bg-gray-100 rounded-lg transition-colors flex-shrink-0"
+                            title="Toggle Sidebar">
+                            <span class="material-symbols-rounded">{{ isSidebarOpen ? 'keyboard_double_arrow_left' :
+                                'keyboard_double_arrow_right' }}</span>
+                        </button>
+                        <input v-model="selectedNote.title" @input="debouncedUpdate"
+                            class="text-lg font-bold text-gray-800 outline-none w-full bg-transparent placeholder-gray-300"
+                            placeholder="Note Title">
+                    </div>
+                    <div class="flex items-center gap-2 flex-shrink-0">
                         <span class="text-xs text-gray-400 min-w-[60px] text-right">{{ statusMessage }}</span>
                         <button @click="deleteNote(selectedNote.id)"
                             class="text-red-400 hover:text-red-500 p-2 rounded hover:bg-red-50" title="Delete Note">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-5 h-5">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                            </svg>
+                            <span class="material-symbols-rounded text-[20px]">delete</span>
                         </button>
                     </div>
                 </div>
@@ -170,11 +205,7 @@
             </div>
 
             <div v-else class="flex-1 flex items-center justify-center text-gray-300 flex-col gap-4 bg-gray-50">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-16 h-16">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-                </svg>
+                <span class="material-symbols-rounded text-gray-200 text-6xl mb-4">note_stack</span>
                 <div class="text-center">
                     <h3 class="text-lg font-medium text-gray-400">No Note Selected</h3>
                     <p class="text-sm">Select a note from the sidebar or create a new one.</p>
