--- a/static/index.html
+++ b/static/index.html
@@ -13,54 +13,23 @@
             font-family: 'Inter', sans-serif;
         }
 
+        /* Adjustments for GitHub Markdown CSS */
         .markdown-body {
-            font-size: 1rem;
-            line-height: 1.6;
+            box-sizing: border-box;
+            min-width: 200px;
+            max-width: 980px;
+            margin: 0 auto;
+            padding: 45px;
         }
 
-        .markdown-body h1 {
-            font-size: 2em;
-            font-weight: bold;
-            margin-bottom: 0.5em;
-        }
-
-        .markdown-body h2 {
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 0.5em;
-        }
-
-        .markdown-body p {
-            margin-bottom: 1em;
-        }
-
-        .markdown-body ul {
-            list-style-type: disc;
-            padding-left: 1.5em;
-            margin-bottom: 1em;
-        }
-
-        .markdown-body blockquote {
-            border-left: 4px solid #e5e7eb;
-            padding-left: 1em;
-            color: #6b7280;
-            font-style: italic;
-        }
-
-        .markdown-body pre {
-            background: #f3f4f6;
-            padding: 1em;
-            border-radius: 0.5em;
-            overflow-x: auto;
-        }
-
-        .markdown-body code {
-            background: #f3f4f6;
-            padding: 0.2em 0.4em;
-            border-radius: 0.3em;
-            font-size: 0.9em;
+        @media (max-width: 767px) {
+            .markdown-body {
+                padding: 15px;
+            }
         }
     </style>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -181,6 +150,23 @@
                     </div>
                     <div class="flex items-center gap-2 flex-shrink-0">
                         <span class="text-xs text-gray-400 min-w-[60px] text-right">{{ statusMessage }}</span>
+                        <div class="flex bg-gray-100 rounded-lg p-1 gap-1">
+                            <button @click="viewMode = 'edit'"
+                                :class="viewMode === 'edit' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
+                                class="p-1 rounded transition-all" title="Editor Only">
+                                <span class="material-symbols-rounded text-[18px] block">edit_note</span>
+                            </button>
+                            <button @click="viewMode = 'split'"
+                                :class="viewMode === 'split' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
+                                class="p-1 rounded transition-all" title="Split View">
+                                <span class="material-symbols-rounded text-[18px] block">vertical_split</span>
+                            </button>
+                            <button @click="viewMode = 'preview'"
+                                :class="viewMode === 'preview' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
+                                class="p-1 rounded transition-all" title="Preview Only">
+                                <span class="material-symbols-rounded text-[18px] block">preview</span>
+                            </button>
+                        </div>
                         <button @click="deleteNote(selectedNote.id)"
                             class="text-red-400 hover:text-red-500 p-2 rounded hover:bg-red-50" title="Delete Note">
                             <span class="material-symbols-rounded text-[20px]">delete</span>
@@ -191,14 +177,16 @@
                 <!-- Split View -->
                 <div class="flex-1 flex overflow-hidden">
                     <!-- Editor -->
-                    <div class="flex-1 flex flex-col border-r border-gray-100">
-                        <textarea v-model="selectedNote.content" @input="debouncedUpdate"
-                            class="flex-1 p-6 outline-none resize-none text-gray-700 leading-relaxed font-mono text-sm bg-white"
+                    <div v-show="viewMode !== 'preview'" class="flex-1 flex flex-col border-r border-gray-100">
+                        <textarea ref="editorRef" @scroll="handleScroll" v-model="selectedNote.content"
+                            @input="debouncedUpdate"
+                            class="flex-1 p-6 outline-none resize-none text-gray-700 leading-relaxed font-sans text-sm bg-white"
                             placeholder="Type markdown here..."></textarea>
                     </div>
 
                     <!-- Preview -->
-                    <div class="flex-1 flex flex-col bg-gray-50 overflow-y-auto">
+                    <div v-show="viewMode !== 'edit'" ref="previewRef" @scroll="handleScroll"
+                        class="flex-1 flex flex-col bg-gray-50 overflow-y-auto">
                         <div class="p-6 markdown-body" v-html="previewContent"></div>
                     </div>
                 </div>
