--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,8 @@
     <title>Shynotes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -28,8 +29,10 @@
             }
         }
     </style>
-    <link rel="stylesheet"
+    <link id="github-theme" rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.min.css">
+    <link id="highlight-theme" rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -167,6 +170,12 @@
                                 <span class="material-symbols-rounded text-[18px] block">preview</span>
                             </button>
                         </div>
+                        <button @click="toggleDarkMode"
+                            class="p-2 text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg transition-colors"
+                            :title="isDarkMode ? 'Light Mode' : 'Dark Mode'">
+                            <span class="material-symbols-rounded text-[20px]">{{ isDarkMode ? 'light_mode' :
+                                'dark_mode' }}</span>
+                        </button>
                         <button @click="deleteNote(selectedNote.id)"
                             class="text-red-400 hover:text-red-500 p-2 rounded hover:bg-red-50" title="Delete Note">
                             <span class="material-symbols-rounded text-[20px]">delete</span>
@@ -186,8 +195,9 @@
 
                     <!-- Preview -->
                     <div v-show="viewMode !== 'edit'" ref="previewRef" @scroll="handleScroll"
-                        class="flex-1 flex flex-col bg-gray-50 overflow-y-auto">
-                        <div class="p-6 markdown-body" v-html="previewContent"></div>
+                        :class="isDarkMode ? 'bg-[#0d1117]' : 'bg-white'" class="flex-1 flex flex-col overflow-y-auto">
+                        <div class="p-6 markdown-body" :style="{ backgroundColor: 'transparent' }"
+                            v-html="previewContent"></div>
                     </div>
                 </div>
             </div>
