--- a/static/index.html
+++ b/static/index.html
@@ -21,10 +21,29 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/static/style.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body class="bg-gray-100 h-screen overflow-hidden text-gray-800 font-sans">
     <div id="app" class="flex h-full">
+        <!-- Login Modal -->
+        <div v-if="!isAuthenticated"
+            class="fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center backdrop-blur-sm">
+            <div class="bg-white p-8 rounded-2xl shadow-2xl w-96 text-center transform transition-all scale-100">
+                <div class="mb-6">
+                    <span class="material-symbols-rounded text-6xl text-blue-600 mb-2">lock</span>
+                    <h2 class="text-2xl font-bold text-gray-800">Welcome Back</h2>
+                    <p class="text-gray-500 text-sm mt-1">Sign in to access your notes</p>
+                </div>
+
+                <div id="google-btn" class="w-full"></div>
+
+                <p class="mt-6 text-xs text-gray-400">
+                    By continuing, you agree to our Terms of Service and Privacy Policy.
+                </p>
+            </div>
+        </div>
+
         <!-- Sidebar -->
         <div :class="isSidebarOpen ? 'w-64' : 'w-0'"
             class="bg-gray-50 border-r border-gray-200 flex flex-col flex-shrink-0 transition-all duration-300 overflow-hidden">
