--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?v=2">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
@@ -81,49 +81,87 @@
                     <div v-for="note in rootNotes" :key="note.id" @click="selectNote(note)"
                         :class="{'bg-blue-50 border-blue-200': selectedNote && selectedNote.id === note.id, 'hover:bg-gray-100 border-transparent': !selectedNote || selectedNote.id !== note.id}"
                         class="p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between">
-                        <div class="flex items-center truncate">
+                        <div class="flex items-center truncate flex-1 min-w-0">
                             <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0" alt="Markdown">
-                            <div class="font-medium text-sm text-gray-700 truncate">{{ note.title || 'Untitled' }}</div>
+
+                            <!-- Rename Input -->
+                            <input v-if="renameState.id === note.id && renameState.type === 'note'"
+                                :id="'rename-input-note-' + note.id" v-model="renameState.name" @click.stop
+                                @blur="saveRename" @keyup.enter="saveRename"
+                                class="flex-1 bg-white border border-blue-300 rounded px-1 text-sm outline-none w-full">
+                            <!-- Normal Title -->
+                            <div v-else @dblclick.stop="startRename(note, 'note')"
+                                class="font-medium text-sm text-gray-700 truncate select-none">{{ note.title ||
+                                'Untitled' }}</div>
                         </div>
-                        <button @click.stop="deleteNote(note.id)"
-                            class="opacity-0 group-hover:opacity-100 text-gray-400 hover:text-red-500 transition-opacity p-1"
-                            title="Delete Note">
-                            <span class="material-symbols-rounded text-[16px]">delete</span>
-                        </button>
+                        <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
+                            <button @click.stop="startRename(note, 'note')"
+                                class="text-gray-400 hover:text-blue-500 p-1" title="Rename Note">
+                                <span class="material-symbols-rounded text-[16px]">edit</span>
+                            </button>
+                            <button @click.stop="deleteNote(note.id)" class="text-gray-400 hover:text-red-500 p-1"
+                                title="Delete Note">
+                                <span class="material-symbols-rounded text-[16px]">delete</span>
+                            </button>
+                        </div>
                     </div>
 
                     <!-- Folders -->
                     <div v-for="folder in folders" :key="folder.id" class="mb-2">
                         <div class="flex items-center text-sm font-semibold text-gray-500 px-2 py-1 mb-1 group">
                             <img src="/static/icons/folder.svg" class="w-5 h-5 mr-2" alt="Folder">
-                            {{ folder.name }}
-                            <button @click.stop="createNoteInFolder(folder.id)"
-                                class="ml-auto opacity-0 group-hover:opacity-100 hover:text-gray-700 transition-opacity mr-1"
-                                title="Add Note to Folder">
-                                <span class="material-symbols-rounded text-[18px]">add</span>
-                            </button>
-                            <button @click.stop="deleteFolder(folder.id)"
-                                class="opacity-0 group-hover:opacity-100 text-gray-400 hover:text-red-500 transition-opacity"
-                                title="Delete Folder">
-                                <span class="material-symbols-rounded text-[16px]">delete</span>
-                            </button>
+                            <!-- Rename Input -->
+                            <input v-if="renameState.id === folder.id && renameState.type === 'folder'"
+                                :id="'rename-input-folder-' + folder.id" v-model="renameState.name" @click.stop
+                                @blur="saveRename" @keyup.enter="saveRename"
+                                class="flex-1 bg-white border border-blue-300 rounded px-1 text-sm outline-none">
+                            <!-- Normal Name -->
+                            <span v-else @dblclick.stop="startRename(folder, 'folder')"
+                                class="truncate flex-1 select-none">{{ folder.name }}</span>
+
+                            <div class="ml-auto opacity-0 group-hover:opacity-100 flex items-center transition-opacity">
+                                <button @click.stop="startRename(folder, 'folder')"
+                                    class="text-gray-400 hover:text-blue-500 mr-1" title="Rename Folder">
+                                    <span class="material-symbols-rounded text-[18px]">edit</span>
+                                </button>
+                                <button @click.stop="createNoteInFolder(folder.id)" class="hover:text-gray-700 mr-1"
+                                    title="Add Note to Folder">
+                                    <span class="material-symbols-rounded text-[18px]">add</span>
+                                </button>
+                                <button @click.stop="deleteFolder(folder.id)" class="text-gray-400 hover:text-red-500"
+                                    title="Delete Folder">
+                                    <span class="material-symbols-rounded text-[16px]">delete</span>
+                                </button>
+                            </div>
                         </div>
                         <div class="pl-3 border-l-2 border-gray-100 ml-2">
                             <div v-for="note in getFolderNotes(folder.id)" :key="note.id" @click="selectNote(note)"
                                 :class="{'bg-blue-50 border-blue-200': selectedNote && selectedNote.id === note.id, 'hover:bg-gray-100 border-transparent': !selectedNote || selectedNote.id !== note.id}"
                                 class="p-2 mb-1 cursor-pointer border rounded-md bg-white flex items-center group justify-between">
-                                <div class="flex items-center truncate">
+                                <div class="flex items-center truncate flex-1 min-w-0">
                                     <img src="/static/icons/markdown.svg" class="w-4 h-4 mr-2 flex-shrink-0"
                                         alt="Markdown">
-                                    <div class="font-medium text-sm text-gray-700 truncate">{{ note.title || 'Untitled'
-                                        }}
-                                    </div>
+
+                                    <!-- Rename Input -->
+                                    <input v-if="renameState.id === note.id && renameState.type === 'note'"
+                                        :id="'rename-input-note-' + note.id" v-model="renameState.name" @click.stop
+                                        @blur="saveRename" @keyup.enter="saveRename"
+                                        class="flex-1 bg-white border border-blue-300 rounded px-1 text-sm outline-none w-full">
+                                    <!-- Normal Title -->
+                                    <div v-else @dblclick.stop="startRename(note, 'note')"
+                                        class="font-medium text-sm text-gray-700 truncate select-none">{{ note.title ||
+                                        'Untitled' }}</div>
                                 </div>
-                                <button @click.stop="deleteNote(note.id)"
-                                    class="opacity-0 group-hover:opacity-100 text-gray-400 hover:text-red-500 transition-opacity p-1"
-                                    title="Delete Note">
-                                    <span class="material-symbols-rounded text-[16px]">delete</span>
-                                </button>
+                                <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
+                                    <button @click.stop="startRename(note, 'note')"
+                                        class="text-gray-400 hover:text-blue-500 p-1" title="Rename Note">
+                                        <span class="material-symbols-rounded text-[16px]">edit</span>
+                                    </button>
+                                    <button @click.stop="deleteNote(note.id)"
+                                        class="text-gray-400 hover:text-red-500 p-1" title="Delete Note">
+                                        <span class="material-symbols-rounded text-[16px]">delete</span>
+                                    </button>
+                                </div>
                             </div>
                             <div v-if="getFolderNotes(folder.id).length === 0"
                                 class="text-xs text-gray-300 italic px-2">Empty</div>
@@ -194,7 +232,7 @@
                     <!-- Preview -->
                     <div v-show="viewMode !== 'edit'" ref="previewRef" @scroll="handleScroll"
                         :class="isDarkMode ? 'bg-[#0d1117]' : 'bg-white'" class="flex-1 flex flex-col overflow-y-auto">
-                        <div class="p-6 markdown-body" :style="{ backgroundColor: 'transparent' }"
+                        <div class="p-0 markdown-body" :style="{ backgroundColor: 'transparent' }"
                             v-html="previewContent"></div>
                     </div>
                 </div>
