--- a/static/index.html
+++ b/static/index.html
@@ -15,8 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&family=Inter:wght@400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/static/style.css?v=2">
@@ -187,35 +186,6 @@
                             placeholder="Note Title">
                     </div>
                     <div class="flex items-center gap-2 flex-shrink-0">
-                        <!-- Smart Edit Button -->
-                        <div class="relative">
-                            <button @click="toggleSmartMenu"
-                                class="p-1 rounded text-purple-600 bg-purple-50 hover:bg-purple-100 transition-colors flex items-center justify-center"
-                                title="Smart Edit">
-                                <span class="material-symbols-rounded text-[20px]">auto_awesome</span>
-                            </button>
-                            <!-- Smart Dropdown -->
-                            <div v-if="isSmartMenuOpen"
-                                class="absolute right-0 top-full mt-2 w-48 bg-white rounded-lg shadow-xl border border-gray-100 z-50 overflow-hidden transform origin-top-right transition-all">
-                                <div class="py-1">
-                                    <button @click="processSmartEdit('proofread')"
-                                        class="w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-purple-50 hover:text-purple-700 transition-colors flex items-center">
-                                        <span class="material-symbols-rounded text-[16px] mr-2">spellcheck</span>
-                                        Proofread
-                                    </button>
-                                    <button @click="processSmartEdit('summarize')"
-                                        class="w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-purple-50 hover:text-purple-700 transition-colors flex items-center">
-                                        <span class="material-symbols-rounded text-[16px] mr-2">summarize</span>
-                                        Summarize
-                                    </button>
-                                    <button @click="processSmartEdit('improve')"
-                                        class="w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-purple-50 hover:text-purple-700 transition-colors flex items-center">
-                                        <span class="material-symbols-rounded text-[16px] mr-2">auto_fix_high</span>
-                                        Improve Writing
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
 
                         <span class="text-xs text-gray-400 min-w-[60px] text-right">{{ statusMessage }}</span>
                         <div class="flex bg-gray-100 rounded-lg p-1 gap-1">
