--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,9 @@
             class="bg-slate-50 border-r border-slate-200 flex flex-col flex-shrink-0 transition-all duration-300">
             <!-- Header -->
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 flex-shrink-0">
-                <h1 class="text-xl font-bold text-slate-700 tracking-wider">SHYNOTE</h1>
+                <h1 class="text-xl font-bold text-slate-700 tracking-wider">
+                    <a href="/">SHYNOTE</a>
+                </h1>
                 <button @click="toggleDarkMode"
                     class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 rounded-full transition-colors"
                     :title="isDarkMode ? 'Switch to Light Mode' : 'Switch to Dark Mode'">
